app/styles/modules/common/lightbox.scss
/* ... */
.lb-create-edit-userstory {
    .points-per-role {
        flex-direction: row;
        flex-wrap: wrap;
        margin: 0;
    }
    .ticket-role-points {
        margin: .1rem;
        min-width: 20%;
        &:first-child {
            margin-left: 0;
        }
        &:nth-child(4n + 4) {
            margin-right: 0;
        }
        &:last-child {
            flex-basis: 100%;
            margin: .1rem 0;
            min-width: 100%;
        }
    }
}

.lightbox-import-error {
    text-align: center;
    .content {
        width: 500px;
    }
    h2 {
        margin-top: 1rem;
    }
    .description {
        a {
            color: $primary;
        }
    }
    img {
        height: 5rem;
    }
}

.lightbox-leave-project-warning {
    text-align: center;
    .icon {
        fill: $gray-light;
        height: 3rem;
        margin-bottom: 1rem;
        width: 3rem;
    }
    .content {
        width: 500px;
    }
}

.lightbox-request-ownership {
    text-align: center;
    .content {
        width: 500px;
    }
}

.lightbox-set-due-date {
    z-index: $overall-layer;
    form {
        flex-basis: 600px;
        flex-flow: 0;
        max-width: 600px;
    }
    .date {
        margin: 2rem 0 1rem;
    }
    .reason textarea {
        margin-top: .5rem;
    }
    .due-date-suggestions {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        margin: 1rem 0 .5rem;
    }
    .suggestion {
        background: rgba($gray-lighter, .2);
        color: $gray-lighter;
        justify-content: flex-start;
        margin: 0 .5rem .5rem;
        min-height: 2rem;
        padding: .5rem .75rem;
        position: relative;
        &:first-child {
            margin-left: 0;
        }
        &:nth-child(4n + 4) {
            margin-right: 0;
        }
        &.clickable {
            &:hover,
            &.active {
                background: rgba($primary-light, .9);
                color: $white;
            }
        }
    }
    .delete-due-date {
        @include font-size(small);
        color: $gray;
        float: right;
        margin: 1rem .25rem 0 0;
        transition: color .3s linear;
        .icon {
            fill: currentColor;
        }
        &:hover {
            color: $red;
            transition: color .3s linear;
            .icon {
                fill: currentColor;
            }
        }
    }
}
/* ... */

